Add dockerfile and docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+/.env
+/src/main/resources/application-local.yaml
 HELP.md
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/main/resources/application-local.yaml
 ### STS ###
 .apt_generated
 .classpath
