--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
   servlet:
     context-path: /
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:postgres}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
   liquibase:
     change-log: classpath:db.migration.v1/changelog.yaml
   jpa:
@@ -16,7 +16,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        default_schema: embroidery
+        default_schema: ${DB_SCHEMA:embroidery}
   servlet:
     multipart:
       enabled: true
