--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./scripts/init-keycloak-db.sh:/docker-entrypoint-initdb.d/init-keycloak-db.sh
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-postgres}"]
       interval: 10s
@@ -39,7 +40,7 @@ services:
       KC_HOSTNAME: ${KEYCLOAK_HOSTNAME:-localhost}
       KC_HOSTNAME_PORT: ${KEYCLOAK_PORT:-8081}
       KC_HEALTH_ENABLED: 'true'
-    command: start --auto-build
+    command: start-dev
     ports:
       - "${KEYCLOAK_PORT:-8081}:8080"
     volumes:
