--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       retries: 5
 
   keycloak:
-    image: quay.io/keycloak/keycloak:23.0.7
+    image: quay.io/keycloak/keycloak:26.0.0
     container_name: keycloak
     restart: always
     networks:
@@ -38,13 +38,14 @@ services:
       KC_DB_PASSWORD: ${KEYCLOAK_DB_PASSWORD:-keycloak_password}
       KC_HTTP_ENABLED: 'true'
       KC_HOSTNAME: ${KEYCLOAK_HOSTNAME:-localhost}
-      KC_HOSTNAME_PORT: ${KEYCLOAK_PORT:-8081}
+      #KC_HOSTNAME_PORT: ${KEYCLOAK_PORT:-8081}
       KC_HEALTH_ENABLED: 'true'
-    command: start-dev
+    command: start-dev && build
     ports:
       - "${KEYCLOAK_PORT:-8081}:8080"
     volumes:
       - keycloak_data:/opt/keycloak/data
+      - ./keycloak-russian-providers-26.0.0.rsp.jar:/opt/keycloak/providers/keycloak-russian-providers-26.0.0.rsp.jar
     depends_on:
       postgres:
         condition: service_healthy
